Fix margins on mobile devices

--- a/style.css
+++ b/style.css
@@ -776,7 +776,7 @@ space {
 }
 
 .full-width-product-view {
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
 }
 
